src/test/contracts/negative/module_parametric_type_access.ligo
module Foo is {
  type foo (_a) is _a * _a
}

type fii is Foo.foo (int)